--- a/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
+++ b/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
@@ -49,12 +49,11 @@ Université Claude Bernard Lyon 1, France}
 \section*{Remerciements}
 % \addcontentsline{toc}{chapter}{Acknowledgement}
 
-Mon stage de 6 mois au sein de l'équipe AMAC à l'ISIR fût une formidable expérience. Je voudrai remercier Stéphane Doncieux, Alexandre Coninx et Carlos Maestre pour leur support et les nombreux conseils avisés qu'ils m'ont donnés.
-Bénéficier de leur expérience et savoirs a été un véritable atout pour mener à bien ce stage.
+Mon stage de 6 mois au sein de l'équipe AMAC à l'ISIR fût une formidable expérience. Je voudrai remercier Stéphane Doncieux, Alexandre Coninx et Carlos Maestre pour leur support et les nombreux conseils avisés qu'ils m'ont donnés. En effet, bénéficier de leur expérience et savoirs a été un véritable atout pour mener à bien ce stage, notamment pour surmonter les nombreux défis auxquels j'ai été confrontés.
 
-L'ISIR est un excellent laboratoires de robotique en France et avoir la possibilité d'y faire un stage a été une extraordinaire opportunité. Mon stage de 6 mois au sein de l'équipe AMAC fût une formidable expérience, notamment parce que j'ai pu travailler sur un domaine passionnant et relativement jeune, la robotique développementale. Par ailleurs,  cette immersion dans un laboratoire de recherche m'a donné l'opportunité de découvrir davantage le monde de la recherche.
+L'ISIR est un excellent laboratoires de robotique en France et avoir la possibilité d'y faire un stage a été une extraordinaire opportunité, notamment parce que j'ai pu travailler sur un domaine passionnant et relativement jeune : la robotique développementale. Par ailleurs, cette immersion dans un laboratoire de recherche m'a donné l'opportunité de découvrir davantage le monde de la recherche.
 
-Reprendre des études en 2016 après avoir travaillé quelques années a été un véritable défi pour moi. En effet, cela supposait de quitter la ville où je vivais, mes amis et mon confort matériel ainsi que de revenir sur les bancs de l'université. J'allais avoir 30 ans et je me demandais si j'allais réussir dans ce Master 2.
+D'autre part, reprendre des études en septembre 2016 après avoir travaillé plusieurs années a été un véritable défi pour moi. En effet, cela supposait de quitter la ville où je vivais, mes amis et mon confort matériel ainsi que de revenir sur les bancs de l'université. J'allais avoir 30 ans et je me demandais si j'allais réussir dans ce Master 2.
 
 % I am very glad to have the opportunity to pursue my works in PhD in the current months.
 
@@ -122,7 +121,7 @@ Le projet DREAM comprend 4 objectifs : (1) Faire évoluer et décompoer de nouve
 
 \begin{figure}
 	\centering
-	\includegraphics[width=.5\textwidth]{figures/project_structure.png}
+	\includegraphics[width=.7\textwidth]{figures/project_structure.png}
 	\label{fig:dream}
 	\caption{Baxter robot}
 \end{figure}
@@ -264,14 +263,14 @@ described a system that allows a robot to learn goal emulation by using learnt a
 
 
 
-\subsection{Related work}
+% \subsection{Related work}
 
-Ce stage de fin d'études l'a été dans le cadre du projet DREAM, débuté en 2015. Ce projet implique 5 partenaires académiques: UMPC/CNRS (coordinateur), ENSTA ParisTech, Universidade da Coruña, Vrije Universiteit Amsterdam et Queen Mary University of London. Ces différents acteurs ont différents rôles au sein du projet DREAM. See waves.
+% Ce stage de fin d'études l'a été dans le cadre du projet DREAM, débuté en 2015. Ce projet implique 5 partenaires académiques: UMPC/CNRS (coordinateur), ENSTA ParisTech, Universidade da Coruña, Vrije Universiteit Amsterdam et Queen Mary University of London. Ces différents acteurs ont différents rôles au sein du projet DREAM. See waves.
 
-\`A l'issue du projet DREAM, les différents modules doivent permettre de constituer un ensemble. 
-% At the end of the DREAM project, the different modules are aimed at be linked together.
+% \`A l'issue du projet DREAM, les différents modules doivent permettre de constituer un ensemble.
+% % At the end of the DREAM project, the different modules are aimed at be linked together.
 
-Our work is directly based on actual PhD student's work on learning affordances inspired from motor babbling.
+% Our work is directly based on actual PhD student's work on learning affordances inspired from motor babbling.
 
 % Linkedin: "The main goal of this thesis is the autonomous creation by a robot of a minimal directory of concepts related to its morphology, its environment, and the accomplished tasks executed. The robot must be able to build and update its internal world model through interactions with its environment (cognitive bootstrapping). This work follows the approach proposed in developmental robotics, inspired by the development of the infants, where abstract concepts are created progressively based on the sensori-motor capabilities of an agent.
 
@@ -289,7 +288,7 @@ Our work is directly based on actual PhD student's work on learning affordances 
 
 \subsection{Environnement}
 
-L'environnement de travail durant notre stage a consisté en différents modules reliés entre eux : ROS,  le simulateur  Gazebo, le framework Moveit et le robot Baxter. ROS is \textit{a flexible framework for writing robot software. It is a collection of tools, libraries, and conventions that aim to simplify the task of creating complex and robust robot behavior across a wide variety of robotic platforms\footnote{http://www.ros.org/about-ros/}}.
+L'environnement de travail durant notre stage était composé de différents composants : ROS,  le simulateur  Gazebo, le framework Moveit et le robot Baxter. ROS is \textit{a flexible framework for writing robot software. It is a collection of tools, libraries, and conventions that aim to simplify the task of creating complex and robust robot behavior across a wide variety of robotic platforms\footnote{http://www.ros.org/about-ros/}}.
 
 Gazebo est un simulateur\footnote{http://gazebosim.org}. La figure \ref{fig7} donne un aperçu d'une simulation lancée avec Gazebo.
 
@@ -299,9 +298,9 @@ Quant au robot Baxter\footnote{http://www.rethinkrobotics.com/baxter/tech-specs/
 
 \begin{figure}
 	\centering
-	\includegraphics[angle=-90,width=.5\textwidth]{figures/baxter}
+	\includegraphics[angle=-90,width=.4\textwidth]{figures/baxter}
 	\label{fig:baxter}
-	\caption{Baxter robot}
+	\caption{Le robot Baxter de Rethink Robotics utilisé à l'ISIR.}
 \end{figure}
 
 % \begin{figure}
@@ -320,7 +319,7 @@ Quant au robot Baxter\footnote{http://www.rethinkrobotics.com/baxter/tech-specs/
 
 \subsubsection{Previous works}
 
-Afin de réaliser cela, le nombre des actions prédéfinies disponibles était fixé à 4 (\textbf{Gauche}, \textbf{Droite}, \textbf{Haut}, \textbf{Bas}). Voir figure~\ref{fig:trajectories}.
+Notre travail se base en partie sur les travaux d'un doctorant, intégré dans le projet DREAM, et portant sur la découverte des affordances. Dans cette première étape, le nombre d'actions disponibles et connues par le robot est arbitrairement paramétré (4 ou 8) (\textbf{Gauche}, \textbf{Droite}, \textbf{Haut}, \textbf{Bas}). Voir figure~\ref{fig:trajectories}.
 
 \begin{figure}
 	\centering
@@ -329,11 +328,14 @@ Afin de réaliser cela, le nombre des actions prédéfinies disponibles était f
 	\label{fig:trajectories}
 \end{figure}
 
-En raison de la nécessesité de généraliser,
-For purpose of generalization, it would not be possible to let such a value. The first step of the internship focused on the goal of achieving environment's \textbf{adaptative discretization}. The main idea behind is to let the agent itself discover actions without specifying an arbitraty number of actions to discover.  In order to do so, clusterization is used to distinguish those different actions. X-means algorithm\cite{Pelleg:2000:XEK:645529.657808}, based on k-means, was used at the beginning. Basically, X-means is a k-means algorithm's generalization, which finds itself the best value for $k$.
+En raison de la nécessesité de généraliser, il n'est pas possible de laisser une telle valeur arbitraire. Pour pallier à ce problème, la première étape de notre stage a porté sur l'accomplissement d'une discrétisation adaptative de l'environnement. L'idée générale est de laisser le robot découvrir lui-même les différentes actions réalisables sans en spécifier le nombre. Pour arriver à cela, le clustering est utilisé afin de distinguer les différentes actions. 
+
+X-means algorithm\cite{Pelleg:2000:XEK:645529.657808}, based on k-means, was used at the beginning. Basically, X-means is a k-means algorithm's generalization, which finds itself the best value for $k$.
 
 
-X-means, travaux d'Ugur pour clusteriser les effets. Mais pas paramètrable. Cf long abstract (v1, v2, v3).
+
+
+Dans Ugur, l'algorithme de clusterisation \textit{X-means} est utilisé pour clusteriser les effets. Mais pas paramètrable. Cf long abstract (v1, v2, v3).
 
 % \begin{figure}
 % 	\centering
@@ -359,7 +361,7 @@ Sur la centaine d'algorithmes de clustering existants, 7 ont été retenus lors 
 
 % Based on \cite{Xu2015}, \cite{Andreopoulos2009}, \cite{Fahad2014} and \cite{Sajana2016}, we reviewed the most common algorithms used for clustering, grouped in categories (see annex for details). Non-arbitrary criteria were required for filtering algorithms. According to the generalization mentioned above, a first criterion concerns the requirement to pass the number of clusters as input parameter. Indeed, as the system should be able to find itself the correct number of actions. A second criterion concern the possibility to work with high dimensionality and a third one is the implemenation's availabily in Python or C++. Algorithms that did not suit to those parameters were discarded.
 
-The intuition behind that choice is based on the fact that the different categories of actions have roughly the same end position. In other terms, a \textbf{Left} action will end in the specific area for left actions. Hence, a large amount of space will be empty and will not contain any end positions. The points distribution would lead to focus on finding areas of high density. For that purpose, density-based algorithms exist.
+% The intuition behind that choice is based on the fact that the different categories of actions have roughly the same end position. In other terms, a \textbf{Left} action will end in the specific area for left actions. Hence, a large amount of space will be empty and will not contain any end positions. The points distribution would lead to focus on finding areas of high density. For that purpose, density-based algorithms exist.
 
 % Afin de comparer les différents algorithmes, une série de tests a été réalisée avec 2 jeux de données différents : un dataset avec une distribution uniforme de points et un jeu de données généré en simulation.
 
@@ -400,9 +402,9 @@ The intuition behind that choice is based on the fact that the different categor
 
 
 \subsubsection{Implémentation}
-Pour implémenter notre algorithme, nous avons utilisé le framework C{}\verb!++! Sferes \cite{Mouret2010} développé au sein de l'équipe AMAC et dédié aux calculs évolutifs. Ce framework a pour avantages d'être léger, multi-coeur et facilement extensible. 
+Pour implémenter notre algorithme, nous avons utilisé le framework C{}\verb!++! Sferes \cite{Mouret2010} développé au sein de l'équipe AMAC et dédié aux calculs évolutifs. Ce framework a pour avantages d'être léger, multi-coeur et facilement extensible. De nombreux algorithmes de l'état de l'art sont disponibles (par exemple : CMA-ES ou NSGA-II). La mise en place est rapide dans la mesure où il ne reste qu'à rédiger le code de la fonction fitness pour obtenir un algorithme évolutionnaire complet.
 
-Un très grand nombre d'algorithmes de clustering existent et ont été trouvés dans l'étape précédente. Sept d'entre eux ont été sélectionnés (principalement des algorithms de partitionnemente et densité). L'enjeu conistait à trouver le meilleur algorithme et paramètres associés pour un jeu de données. Nous avions également besoin d'une méthode pour valider les paramètres trouvés. Cet algorithme est utilisé par la fonction fitness au sein de l'algorithme évolutionnaire. La méthode proposée consiste en un algorihtme itératif au sein duquel un algorithme de clustering est réglé afin de satisfaire à 3 objectifs : \circled{1} le nombre de mouvements pour atteindre la cible, devant être minimisé pour faire en sorte que le robot soit le plus rapide possible, \circled{2} le nombre de clusters, devant être minimisé pour simplifier le calcul et \circled{3} la distance finale, à minimiser pour la précision du contrôle. Dans la mesure où plusieurs objectifs sont à minimiser, nous avons sélectionné l'algorithme évolutif NSGA-II\cite{Deb:2002:FEM:2221359.2221582} pour remplir cette tâche.
+Un très grand nombre d'algorithmes de clustering existent et ont été trouvés dans l'étape précédente. Sept d'entre eux ont été sélectionnés (principalement des algorithms de partitionnemente et densité). L'enjeu conistait à trouver le meilleur algorithme et paramètres associés pour un jeu de données. Nous avions également besoin d'une méthode pour valider les paramètres trouvés. Cet algorithme est utilisé par la fonction fitness au sein de l'algorithme évolutionnaire. La méthode proposée consiste en un algorithme itératif au sein duquel un algorithme de clustering est réglé afin de satisfaire à 3 objectifs : \circled{1} le nombre de mouvements pour atteindre la cible, devant être minimisé pour faire en sorte que le robot soit le plus rapide possible, \circled{2} le nombre de clusters, devant être minimisé pour simplifier le calcul et \circled{3} la distance finale, à minimiser pour la précision du contrôle. Dans la mesure où plusieurs objectifs sont à minimiser, nous avons sélectionné l'algorithme évolutif NSGA-II\cite{Deb:2002:FEM:2221359.2221582} pour remplir cette tâche.
 
 \begin{algorithm}
 \caption{Evaluation algorithm for fitness function}\label{euclid}
@@ -426,9 +428,9 @@ Un très grand nombre d'algorithmes de clustering existent et ont été trouvés
   \end{algorithmic}
 \end{algorithm}
 
-Une validation expérimentale de notre méthode a été effectuée en utilisant l'algorithme \textit{Mean Shift}, qui a révélé empiriquement la génération de clusters plus divers que \textit{X-means} lorsque ses paramètres ont été changés. Le génotype est constitué par la valeur d'un seul paramètre décimal associé à cet algorithme. La population initiale est constituée de 32 individus, évalués durant 25 générations. Les taux de croisement et de mutation pour NSGA-II sont respectivement de 0.8 et 0.1. Nous avons utilisé un jeu de données généré par un babillage orienté-objet simulé (voir ). Un point final a été aléatoirement généré au début de l'expérience. La fitness a été évaluée 30 fois pour chaque individu, les valeurs moyennes des objectifs étant ensuite reportées.
+La validation expérimentale de notre méthode a été effectuée en utilisant l'algorithme \textit{Mean Shift}, qui a révélé empiriquement la génération de clusters plus divers que \textit{X-means} lorsque ses paramètres ont été changés. Le génotype est constitué par la valeur d'un seul paramètre décimal associé à cet algorithme. La population initiale est constituée de 32 individus, évalués durant 25 générations. Les taux de croisement et de mutation pour NSGA-II sont respectivement de 0.8 et 0.1. Nous avons utilisé un jeu de données généré par un babillage orienté-objet simulé (voir ). Un point final a été aléatoirement généré au début de l'expérience. La fitness a été évaluée 30 fois pour chaque individu, les valeurs moyennes des objectifs étant ensuite reportées.
 
-Les résultats ont été comparés avec une discrétization obenue par une recherche de type \textit{Grid Search} dans l'espace de paramètres. Les clusters obtenus pour différentes valeurs du paramètre \textit{quantile} de \textit{Mean Shift} sont listés dans la figure \ref{fig:validation} 
+Les résultats ont été comparés avec une discrétization obenue par une recherche de type \textit{Grid Search} dans l'espace de paramètres. Le résultat obtenu est une succession de graphiques représentant les différents clusters obtenus avec les différentes valeurs de paramètres. Des exemples de clusters obtenus pour différentes valeurs du paramètre \textit{quantile} de \textit{Mean Shift} sont listés dans la figure \ref{fig:validation}.
 
 \begin{figure}[ht]
   \begin{center}
@@ -440,31 +442,13 @@ Les résultats ont été comparés avec une discrétization obenue par une reche
 
 NSGA-II étant un algorithme multi-objectif, plusieurs meilleures solutions peuvent être trouvées, correspondants aux individus dominants le front de Pareto. La figure \ref{fig:pareto_front} montre la valeur du paramètre (de l'algorithme de clustering) correspondant aux individus dominants. Différentes valeurs peuvent être relevées, par exemple 0.05, 0.12 ou 0.31.
 
-% \begin{figure}[ht]
-%   \begin{center}
-%   \includegraphics[width=0.4\textwidth]{figures/Pareto_front.pdf}
-%     \caption{Valeur du paramètre de l'algorithme de clustering Mean Shift correspondant aux individus dominants le front de Pareto.}
-%   \ref{fig4}
-%   \label{fig4}
-%   \end{center}
-% \end{figure}
-
 \`A partir de cet ensemble de meilleures valeurs de paramètres, nous avons généré (Figure \ref{fig:results}) deux séries de graphiques. Les deux ensembles de clusters optimisent différents objectifs : vitesse et précision pour celui de gauche contre coût computationnel pour celui de droite. La colonne de gauche contient davantage de clusters et permet un contrôle rapide et précis. \`A l'inverse, l'autre solution repose sur un nombre moins important de clusters.
-
-% \begin{figure}[ht]
-%   \begin{center}
-%   \includegraphics[width=0.5\textwidth]{figures/Benchmark_3.pdf}
-%   % \caption{The two columns show different clustering results and evaluation trajectories based on parameter values belonging to indivuals on Pareto Front.}
-%   \caption{Les deux colonnes montrent différents résultats de clustering et de trajectoires d'évaluations basés sur les valeurs de paramètres appartenant aux individus dominants le front de Pareto.}
-%   \label{fig6}
-%   \end{center}
-% \end{figure}
 
 \begin{figure}[!tbp]
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{figures/Pareto_front.pdf}
-    \caption{Valeur du paramètre de l'algorithme de clustering Mean Shift correspondant aux individus dominants le front de Pareto.}
+    \caption{Valeur du paramètre de l'algorithme de clustering Mean Shift correspondant aux individus dominants le front de Pareto. Plusieurs valeurs se détachent, par exemple $0.05$, $0.11$ ou $0.3$.}
     \label{fig:pareto_front}
   \end{minipage}
   \hfill
@@ -486,15 +470,16 @@ Cette première partie de notre stage a fait l'objet d'une soumission d'un abstr
 
 
 \subsection{Expérience de validation}
-La seconde partie de notre stage a consisté à mener une expérience en se basant sur l'algorithme de clusterisation d'effets défini dans la première partie. Dans un premier temps, l'expérimentation a eu lieu en simulation. Une fois cette simulation validée, le robot réel a été utilisé. Cette expérience peut être divisée en 3 étapes : \circled{1} génération du babbling sensorimoteur et enregistrement des effets pour les différents objets, \circled{2} réalisation de la clusterization des effets et \circled{3} test de l'apprentissage.  La figure \ref{fig:setup} représente la mise en place initiale de l'expérimentation.
+La seconde partie de notre stage a consisté à mener une expérience pour valider l'algorithme de clusterisation d'effets défini dans la première partie de ce mémoire. Dans un premier temps, l'expérimentation a eu lieu en simulation. Une fois cette simulation validée, le robot réel a été utilisé. Cette expérience peut être divisée en 3 étapes : \circled{1} génération du babbling sensorimoteur et enregistrement des effets pour les différents objets, \circled{2} réalisation de la clusterization des effets et \circled{3} test de l'apprentissage.  La figure \ref{fig:setup} représente la mise en place initiale de l'expérimentation.
 
-Durant la première étape de cette expérimentation, un objet (cube) est placé sur la table et un babillage est réalisé afin d'obtenir des jeux de données contenant les différents effets à traiter. Ce babillage est effectué à l'aide de l'algorithme NovEB décrit par par Maestre et al. dans \cite{Maestre2015}. Cet algorithme utilise l'algorithme évolutionnaire \textit{Novelty Search}\cite{5949955} pour générer des trajectoires permettant d'atteindre un objet dans le cadre d'un babillage. Pour cela, le calcul des trajectoires est effectué dans un premier temps \textit{via} sélection/mutation. Puis, pour chaque trajectoire, l'on regarde si elle intersecte avec le cube. Si c'est le cas, cette trajectoire est gardée et jouée par le robot en simulation. La figure \ref{fig:ns_traj} montre un exemple de trajectoire touchant l'objet considéré.
+\subsubsection{Babillage}
+Durant la première étape de cette expérimentation, un objet (par exemple, un cube) est placé sur la table à une position initiale. Un babillage sur l'objet est réalisé afin d'obtenir ses jeux de données contenant les différents effets découverts à traiter. Ce babillage est effectué à l'aide de l'algorithme \textit{NovEB} décrit par Maestre et al.\cite{Maestre2015}. Cet algorithme utilise l'algorithme évolutionnaire \textit{Novelty Search}\cite{5949955} pour générer des trajectoires permettant d'atteindre un objet dans le cadre d'un babillage. Pour cela, le calcul des trajectoires est effectué dans un premier temps \textit{via} sélection/mutation. Puis, pour chaque trajectoire, l'on regarde si elle intersecte avec le cube. Si c'est le cas, cette trajectoire est gardée et jouée par le robot en simulation. La figure \ref{fig:ns_traj} montre un exemple de trajectoire touchant l'objet considéré.
 
 \begin{figure}[!tbp]
   \centering
   \begin{minipage}[b]{0.4\textwidth}
     \includegraphics[width=\textwidth]{figures/Experiment_setup_annoted_FR.png}
-    \caption{L'objectif du robot est d'apprendre à pousser différents objets (par exemple, un cube) depuis sa position initiale jusqu'à la zone cible.}
+    \caption{L'objectif du robot est d'apprendre à pousser différents objets (par exemple, le cube vert) depuis sa position initiale jusqu'à la zone cible en bleu. Une première étape de babillage permet de découvrir les effets qui sont clusterisés à l'aide de l'algorithme de clusterisation. Enfin, dans une troisième étape, le robot tente d'atteindre la zone cible.}
     \label{fig:setup}
   \end{minipage}
   \hfill
@@ -505,30 +490,19 @@ Durant la première étape de cette expérimentation, un objet (cube) est placé
   \end{minipage}
 \end{figure}
 
-% \begin{figure}[ht]
-%   \begin{center}
-%   \includegraphics[width=0.7\textwidth]{figures/Experiment_setup_annoted_FR.png}
-%   \caption{L'objectif du robot est d'apprendre à pousser différents objets (par exemple, un cube) depuis sa position initiale jusqu'à la zone cible.}
-%   \label{fig:setup}
-%   \end{center}
-% \end{figure}
-
-% \begin{figure}[ht]
-%   \begin{center}
-%   \includegraphics[width=0.7\textwidth]{figures/ns_trajectory.png}
-%   \caption{Génération de trajectoire avec NovEB. Le rectangle rouge représente l'emplacement du robot. Le point rouge correspond à la position initiale de l'effecteur du robot. Le tracé en bleu correspond à la trajectoire de cet effecteur vers l'objet. L'étoile verte indique la position de l'objet à la fin de l'exécution de la trajectoire de l'effecteur.}
-%   \label{fig:ns_traj}
-%   \end{center}
-% \end{figure}
-
 
 % Ces objets ont différentes propriétés : certains peuvent être poussés à partir de n'importe quelle face et générer un comportement identique (boîte), tandis que d'autres nécessiteront d'être poussés depuis une face particulière (cylindre et cône) afin de garder une trajectoire cohérente. Le babillage réalisé par le robot sur ces différents objets permet de produire des jeux de données d'effets.
+\subsubsection{Clusterisation d'effets}
 La seconde étape implique l'algorithme que nous avons présenté ci-dessus et vise à clusteriser les effets présents dans les jeux de données. Il en résulte une variété de paramètres qui peuvent être exploités durant la troisième étape.
 Les meilleurs paramètres trouvés dans l'étape précédente sont utilisés pour pousser les différents objects vers la zone cible.
 
 % La première étape consiste donc en un babillage. Concrétement, la position de l'objet sur l'espace de travail est récupérée ainsi que la position de l'effecteur. Une trajectoire est ensuite générée à l'aide de la cinématique inverse et Novelty Search afin d'atteindre l'objet. Cet objet est positionné de façon aléatoire dans les intervalles [x;x] et [y;y].
 
+\subsubsection{Poussée de l'objet}
 Enfin, dans un troisième temps, le robot tente de pousser l'objet présenté devant lui vers une zone cible, en utilisant les différents effets à sa disposition. Cette dernière étape soulève plusieurs problèmes qu'il a fallu résoudre. Tout d'abord, concernant la position de l'effecteur. Les effets générés lors du babillage sont effectués à partir de différentes faces de l'objet. Ainsi, lorsque le robot tente de pousser l'objet vers la zone cible, en fonction de la position de cette zone à atteindre, les effets seront différents ainsi que les faces/points de contacts d'où initier les effets. \`A chaque effet est associé un point de contact dans le repère de l'objet. Cela nous a amené à récupérer les coordonnées du point de contact pour savoir d'où initier l'effet. Ces coordonnées sont exprimées dans le repère lié à l'objet et sont corrélées à l'effet enregistré. Le second problème a trait avec la tâche en tant que telle : l'objectif visé n'est pas de pousser simplement un objet jusqu'à une zone finale, mais d'effectuer une geste avec une vélocité élevée afin de pousser fortement l'objet jusqu'à la zone inacessible pour le bras du robot. Utilisation de Quality Diversity pour effectuer le babillage concernant la vélocité.
+
+\subsubsection{Résultats}
+
 
 
 % During the first step, several different objects are placed on the table, one after another. Those objects have different properties: a box, a cylinder which and a cone. Some can be pushed from any face and will have the same behavior, whereas the other ones need to be pushed from a particular face to move significantly. The babbling with the different objects would result in a dataset of effects.
@@ -544,7 +518,7 @@ Enfin, dans un troisième temps, le robot tente de pousser l'objet présenté de
 
 
 
-\section{Future works \& Perspectives}
+\section{Travaux futurs et perspectives}
 
 Plusieurs axes d'améliorations peuvent être proposés. Durant ce stage, nous avons testé l'algorithme présenté ci-dessus avec un seul algorithme de clustering, \textit{Mean Shift}. Le premier axe d'amélioration consisterait à tester davantage d'algorithmes de clustering, tels qu'\textit{Affinity Propagation}, \textit{Birch} ou \textit{DBSCAN}. Un second axe d'amélioration pourrait être de tester l'algorithme avec des tâches plus complexes.
 
@@ -561,7 +535,9 @@ L'algorithme décrit dans ce mémoire a été utilisé pour une expérience réa
 
 Ce stage de fin d'études de Master 2 m'a permis de davantage découvrir le domaine de la robotique développementale et ce qu'il implique, après la brève introduction que nous avons eu durant le semestre de M2 à Lyon. Ce domaine de recherche est fascinant et très intéressant dans la mesure où les chercheurs tendent à créer des robots qui pourraient boostrap from almost no knowledge. Le lien étroit entre neurosciences et spécialement neurosciences cognitives permet d'implémenter des modèles présent chez l'être humain.
 
-In that paper, we have proposed an approach to allow a robot learn from its own experiments and exploit babbling data in order to identify sets of reachable effects that define actions relevant to a task-dependant context. In the future, we will extend that approach by using more clustering al- gorithms and parameters, and investigate its application to more complex and varied tasks.
+Le sujet abordé dans ce stage pointe la difficulté que représente la conception d'un robot autonome et capable d'apprendre en permanence dans son environnement.
+
+In that paper, we have proposed an approach to allow a robot learn from its own experiments and exploit babbling data in order to identify sets of reachable effects that define actions relevant to a task-dependant context. In the future, we will extend that approach by using more clustering algorithms and parameters, and investigate its application to more complex and varied tasks.
 
 % \section*{Annexe}
 
